src/bootstrap/test/v0_7/rejects/04_send_on_closed/main.zg
# requires: v0.7

fn main() {
    ch := chan[int](1)
    close(ch)
    ch <- 5
}

main()
